--- a/.github/workflows/main_MabuneFukasawaWebApp.yml
+++ b/.github/workflows/main_MabuneFukasawaWebApp.yml
@@ -9,6 +9,9 @@ on:
       - main
   workflow_dispatch:
 
+env:
+  APP_PATH: './src/Web'
+
 jobs:
   build-and-deploy:
     runs-on: windows-latest
@@ -22,9 +25,9 @@ jobs:
         dotnet-version: '3.1.301'
 
     - name: Build with dotnet
-      run: dotnet build --configuration Release
+      run: dotnet build ${{ env.APP_PATH }} --configuration Release
 
-    - name: dotnet publish
+    - name: dotnet publish ${{ env.APP_PATH }} -c Release -o ${{env.DOTNET_ROOT}}/myapp
       run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
     - name: Deploy to Azure Web App
