--- a/.github/workflows/main_MabuneFukasawaWebApp.yml
+++ b/.github/workflows/main_MabuneFukasawaWebApp.yml
@@ -27,8 +27,8 @@ jobs:
     - name: Build with dotnet
       run: dotnet build ${{ env.APP_PATH }} --configuration Release
 
-    - name: dotnet publish ${{ env.APP_PATH }} -c Release -o ${{env.DOTNET_ROOT}}/myapp
-      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
+    - name: dotnet publish 
+      run: dotnet publish ${{ env.APP_PATH }} -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
